--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
     </div>
     <div class="message"></div>
+    <div class="signature"><p>By leochok</p></div>
     <script src="app.js"></script>
 </body>
 
